--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongodb": "^3.2.6",
-    "mongoose": "^5.5.12",
+    "mongoose": ">=5.7.5",
     "morgan": "~1.9.1",
     "pug": "^2.0.3"
   }
